# chain-protocol-lab

./: .gitignore  Cargo.toml
core/: Cargo.toml
core/src/: block.rs  lib.rs  state.rs  store.rs  tx.rs
core/tests/: block_hash_change.rs
node/: Cargo.toml
node/src/: lib.rs
p2p/: Cargo.toml
p2p/examples/: consensus.rs  gossip_messaging.rs  simple_message.rs  simple_messaging.rs
p2p/src/: block.rs  lib.rs  message.rs  node.rs  peer.rs
p2p/tests/: consensus_tests.rs
tests/: block_flow.rs
