[workspace]
members = ["core"]
resolver = "3"

[package]
name = "xlab"
version = "1.0.0"
edition = "2024"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
blake3 = "1.8.2"
bincode = "1.3"

[dependencies]
bincode = { workspace = true }
core = { path = "./core"}